[package]
name = "tgames"
description = "A collection of little terminal games"
version = "0.3.1"
license = "MIT"
authors = ["Eduardo Marinho <eduardonestormarinho@proton.me>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/enfmarinho/tgames.git"

[dependencies]
strum = "0.26.1"
strum_macros = "0.26.1"
crossterm = "0.27.0"
rand = "0.8.5"
ratatui = "0.26.0"
