[package]
name = "tgames"
description = "A collection of little terminal games"
version = "0.3.3"
license = "MIT"
authors = ["Eduardo Marinho <eduardonestormarinho@proton.me>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/enfmarinho/tgames.git"

[dependencies]
strum = "0.27.2"
strum_macros = "0.27.2"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0"
dirs = "6.0.0"
